Atualizacao de scripts e estilo(sass)

--- a/css/main.scss
+++ b/css/main.scss
@@ -72,6 +72,7 @@ h2 {
 }
 
 .conteudo {
+  position: relative;
   margin-top: 30px;
   margin-bottom: 30px;
 
@@ -95,6 +96,10 @@ h2 {
 
 .bloco {
   position: relative;
+}
+
+.bg-info {
+  padding:10px;
 }
 
 #pre-header {
@@ -259,4 +264,62 @@ h2 {
     height: auto;
   }
 
+}
+
+/* ---- .grid-item ---- */
+
+* {
+  box-sizing: border-box;
+}
+
+/* force scrollbar */
+html { overflow-y: scroll; }
+
+body {
+  font-family: sans-serif;
+}
+
+/* ---- isotope ---- */
+
+.grid {
+  background: #fff;
+}
+
+/* clear fix */
+.grid:after {
+  content: '';
+  display: block;
+  clear: both;
+}
+
+/* ---- .grid-item ---- */
+
+.grid-sizer,
+.grid-item {
+  width: 33.333%;
+}
+
+.grid-item {
+  float: left;
+}
+
+.grid-item img {
+  display: block;
+  max-width: 100%;
+}
+
+
+@media (min-width:1500px){
+	#masonry-grid .gutter-sizer{width:4%;}
+	#masonry-grid .grid-item{width:22%;margin-bottom:4%;}
+}
+
+@media (max-width:1200px){
+	#masonry-grid .gutter-sizer{width:4%;}
+	#masonry-grid .grid-item{width:48%;}
+}
+
+@media (max-width:768px){
+	#masonry-grid .gutter-sizer{width:0%;}
+	#masonry-grid .grid-item{width:100%;}
 }
