Troca para chamada de arquivo estático ImagesLoaded

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -46,6 +46,7 @@
 <script language="Javascript" src="{{ "/assets/bootstrap/dist/js/bootstrap.min.js" | prepend: site.baseurl  }}"></script>
 <script language="Javascript" src="{{ "/assets/angular/angular.min.js" | prepend: site.baseurl  }}"></script>
 <script language="Javascript" src="{{ "/assets/angular-auto-validate/dist/jcs-auto-validate.min.js" | prepend: site.baseurl  }}" ></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/3.2.0/imagesloaded.pkgd.min.js"></script>
+<script lang="Javascript" src="{{ "/assets/imagesloaded/imagesloaded.pkgd.min.js" | prepend: side.baseurl }}"></script>
+<script lang="Javascript" src="{{ "/assets/masonry/dist/masonry.pkgd.min.js" | prepend: side.baseurl }}"></script>
 <script lang="Javascript" src="{{ "/assets/masonry/dist/masonry.pkgd.min.js" | prepend: side.baseurl }}"></script>
 <script language="Javascript" src="{{ "/assets/main.js" | prepend: site.baseurl  }}"></script>
