Página Fotos: Clicar para Ampliar
+ plugin fancy box
+ codices de call css e js
+ ajustes na página para execução da funcionalidade

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -48,5 +48,5 @@
 <script language="Javascript" src="{{ "/assets/angular-auto-validate/dist/jcs-auto-validate.min.js" | prepend: site.baseurl  }}" ></script>
 <script lang="Javascript" src="{{ "/assets/imagesloaded/imagesloaded.pkgd.min.js" | prepend: side.baseurl }}"></script>
 <script lang="Javascript" src="{{ "/assets/masonry/dist/masonry.pkgd.min.js" | prepend: side.baseurl }}"></script>
-<script lang="Javascript" src="{{ "/assets/masonry/dist/masonry.pkgd.min.js" | prepend: side.baseurl }}"></script>
+<script lang="Javascript" src="{{ "/assets/fancyBox/source/jquery.fancybox.pack.js" | prepend: side.baseurl }}"></script>
 <script language="Javascript" src="{{ "/assets/main.js" | prepend: site.baseurl  }}"></script>
