--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,9 +16,16 @@
     <div class="row">
       <div class="col-lg-3">
         <div class="footer-menu">
-          {% for my_page in site.pages %}
+          <!-- sort:"weight é uma variavel atachada no objeto página
+          para definir a ordem no menu" -->
+          {% assign pages = site.pages | sort:"weight"  %}
+          {% for my_page in pages %}
             {% if my_page.title %}
-            <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
+              {% if page.url == my_page.url %}
+                <a class="page-link active" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a><br>
+              {% else %}
+                <a class="page-link" href="{{my_page.url}}">{{my_page.title}}</a><br>
+              {% endif %}
             {% endif %}
           {% endfor %}
         </div>
