--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,20 +2,20 @@
 
   <div class="container">
     <div class="row top">
-      <div class="col-lg-3">
+      <div class="col-lg-3 col-sm-12 col-xs-12 center-xs">
         <a class="logotipo" href="{{ site.baseurl }}/" title="{{ site.title }}">
           <img src="{{ "/assets/images/logo-rodape.png" | prepend: site.baseurl }}">
         </a>
       </div>
 
-      <div class="col-lg-9">
+      <div class="col-lg-9 col-sm-12 col-xs-12 center-xs">
         <div class="hashtag">#PratiqueMuayThaiPelaSaúde</div>
       </div>
     </div>
 
     <div class="row">
-      <div class="col-lg-3">
-        <div class="footer-menu">
+      <div class="col-lg-3 hidden-xs hidden-sm">
+        <div class="footer-menu center-xs">
           <!-- sort:"weight é uma variavel atachada no objeto página
           para definir a ordem no menu" -->
           {% assign pages = site.pages | sort:"weight"  %}
@@ -31,13 +31,23 @@
         </div>
       </div>
 
-      <div class="col-lg-6">
+      <div class="col-lg-7 col-sm-12 col-xs-12">
         <div class="redes-sociais">
-          facebook, instagram, e outras coisas
+          <div class="fb-page"
+              data-href="https://www.facebook.com/Projeto-Taroni-Muaythai-Para-Todos-1676837902591953/?fref=ts"
+              data-small-header="true"
+              data-adapt-container-width="true"
+              data-hide-cover="false"
+              data-show-facepile="true">
+          </div>
         </div>
       </div>
 
       <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12 assinatura">
+        <div class="hidden-lg hidden-sm">
+          <br><br>
+        </div>
+
         <a class="logotipo" href="http://pracadoconhecimento.com.br" target="_blank">
           <img src="{{ "/assets/images/nave-assinatura.png" | prepend: site.baseurl }}">
         </a>
