--- a/css/main.scss
+++ b/css/main.scss
@@ -323,3 +323,44 @@ body {
 	#masonry-grid .gutter-sizer{width:0%;}
 	#masonry-grid .grid-item{width:100%;}
 }
+
+/* Large Devices, Wide Screens */
+@media only screen and (max-width : 1200px) {
+
+}
+
+/* Medium Devices, Desktops */
+@media only screen and (max-width : 992px) {
+
+}
+
+/* Small Devices, Tablets */
+@media only screen and (max-width : 768px) {
+
+}
+
+/* Extra Small Devices, Phones */
+@media only screen and (max-width : 480px) {
+  #site-footer,
+  .center-xs {
+      text-align: center;
+      float: none;
+  }
+
+  .hashtag {
+    font-size: 1.5em;
+  }
+}
+
+/* Custom, iPhone Retina */
+@media only screen and (max-width : 320px) {
+  #site-footer,
+  .center-xs {
+      text-align: center;
+      float: none;
+  }
+
+  .hashtag {
+    font-size: 1.5em;
+  }
+}
