--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -59,11 +59,13 @@
 
 </footer>
 
-<script language="Javascript" src="{{ "/assets/jquery/dist/jquery.min.js" | prepend: site.baseurl  }}"></script>
-<script language="Javascript" src="{{ "/assets/bootstrap/dist/js/bootstrap.min.js" | prepend: site.baseurl  }}"></script>
-<script language="Javascript" src="{{ "/assets/angular/angular.min.js" | prepend: site.baseurl  }}"></script>
-<script language="Javascript" src="{{ "/assets/angular-auto-validate/dist/jcs-auto-validate.min.js" | prepend: site.baseurl  }}" ></script>
+<script lang="Javascript" src="{{ "/assets/jquery/dist/jquery.min.js" | prepend: site.baseurl  }}"></script>
+<script lang="Javascript" src="{{ "/assets/bootstrap/dist/js/bootstrap.min.js" | prepend: site.baseurl  }}"></script>
+<script lang="Javascript" src="{{ "/assets/angular/angular.min.js" | prepend: site.baseurl  }}"></script>
+<script lang="Javascript" src="{{ "/assets/angular-auto-validate/dist/jcs-auto-validate.min.js" | prepend: site.baseurl  }}" ></script>
 <script lang="Javascript" src="{{ "/assets/imagesloaded/imagesloaded.pkgd.min.js" | prepend: side.baseurl }}"></script>
 <script lang="Javascript" src="{{ "/assets/masonry/dist/masonry.pkgd.min.js" | prepend: side.baseurl }}"></script>
 <script lang="Javascript" src="{{ "/assets/fancyBox/source/jquery.fancybox.pack.js" | prepend: side.baseurl }}"></script>
-<script language="Javascript" src="{{ "/assets/main.js" | prepend: site.baseurl  }}"></script>
+<script lang="Javascript" src="{{ "/assets/fancyBox/source/jquery.fancybox.pack.js" | prepend: side.baseurl }}"></script>
+<script lang="Javascript" src="{{ "/assets/slickNav/dist/jquery.slicknav.min.js" | prepend: site.baseurl }}"></script>
+<script lang="Javascript" src="{{ "/assets/main.js" | prepend: site.baseurl  }}"></script>
