--- a/css/main.scss
+++ b/css/main.scss
@@ -364,3 +364,15 @@ body {
     font-size: 1.5em;
   }
 }
+
+
+
+.js .slicknav_menu {
+	display:block;
+  background-color: black;
+
+  & a,
+  & a:visited, {
+    color: white;
+  }
+}
