--- a/css/main.scss
+++ b/css/main.scss
@@ -123,6 +123,13 @@ h2 {
 #menu-principal {
   .trigger {
     text-align: center;
+
+    margin: 0;
+    padding: 0;
+
+    li {
+      display: inline-block;
+    }
   }
 
   .site-nav {
