--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -65,6 +65,6 @@
 <script lang="Javascript" src="{{ "/assets/angular-auto-validate/dist/jcs-auto-validate.min.js" | prepend: site.baseurl  }}" ></script>
 <script lang="Javascript" src="{{ "/assets/imagesloaded/imagesloaded.pkgd.min.js" | prepend: side.baseurl }}"></script>
 <script lang="Javascript" src="{{ "/assets/masonry/dist/masonry.pkgd.min.js" | prepend: side.baseurl }}"></script>
-<script lang="Javascript" src="{{ "/assets/fancybox/source/jquery.fancybox.pack.js" | prepend: side.baseurl }}"></script>
+<script lang="Javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.pack.js"></script>
 <script lang="Javascript" src="{{ "/assets/slicknav/dist/jquery.slicknav.min.js" | prepend: site.baseurl }}"></script>
 <script lang="Javascript" src="{{ "/assets/main.js" | prepend: site.baseurl  }}"></script>
