--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -58,7 +58,7 @@
   </div>
 
 </footer>
-
+<script lang="Javascript" src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 <script lang="Javascript" src="{{ "/assets/jquery/dist/jquery.min.js" | prepend: site.baseurl  }}"></script>
 <script lang="Javascript" src="{{ "/assets/bootstrap/dist/js/bootstrap.min.js" | prepend: site.baseurl  }}"></script>
 <script lang="Javascript" src="{{ "/assets/angular/angular.min.js" | prepend: site.baseurl  }}"></script>
