--- a/css/main.scss
+++ b/css/main.scss
@@ -217,6 +217,13 @@ h2 {
   margin-top: -30px;
 }
 
+.video {
+  img {
+    width: 100%;
+    height: auto;
+  }
+}
+
 .descricao {
   text-align: justify;
 }
